--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -26,19 +26,22 @@ font-family: 'Yatra One', cursive;
 }
 
 html {
-    font-family: var(--textn) 
+    font-family: var(--textn);
+    color: var(--cor0);
 }
 
 body {
     background-color: #0f0f0f;
 }
 
+main {
+    max-width: 1920px;
+    margin: 0px auto;
+}
+
 @media screen and (max-width: 2560px) {
     
-    main {
-        max-width: 1920px;
-        margin: 0px auto;
-    }
+    /**/
 
     header {
         position: relative;
@@ -50,6 +53,7 @@ body {
     nav#menu {
         position: fixed;
         top: 0px;
+        left: 0px;
         width: 100%;
         height: 100px;
         z-index: 1;
@@ -89,7 +93,8 @@ body {
         color: var(--corA);
         background-color: rgba(0,0,0,0.9);
         box-shadow: 0px 0px 5px rgba(119, 0, 153, 0.7);
-        text-transform: uppercase;
+        font-family: var(--text2);
+        font-size: 1.1em;
         font-weight: bold;
         transition: 0.5s;
     }
@@ -123,6 +128,16 @@ body {
         padding-top: 10px;
         font-size: 2.5em;
     }
+
+    .involucro {
+        /* background-color: black; */
+        position: relative;
+        max-width: 1200px;
+        margin: 0px auto;
+        box-shadow: 0px 0px 5px #550055;
+    }
+
+
 
 
 
