--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -12,134 +12,102 @@ font-family: 'Yatra One', cursive;
 */
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 :root {
     --cor0: #f7f7f7;
     --cor1: #070707;
-    --corA: #770099;
-    --text1: 'Amarante', cursive;
-    --text2: 'Galdeano', sans-serif;
+    /* --cora: #; */
+    /* --corb: #; */
+    /* --corc: #; */
+    /* --cord: #; */
+    /* --core: #; */
+    /* --text1: ; */
+    /* --text2: ; */
+    /* --textm: ; */
     --textn: 'Roboto', sans-serif;
 }
 
 html {
     font-family: var(--textn);
-    color: var(--cor0);
 }
 
 body {
-    background-color: #0f0f0f;
+    background-color: #FFFFFF;
 }
 
-main {
-    max-width: 1920px;
-    margin: 0px auto;
+#container {
+    background-color: var(--cor0);
+    max-width: 1200px;
+    margin: auto;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px rgba(15, 15, 15, 0.7);
 }
 
-@media screen and (max-width: 2560px) {
-    
-    /**/
+/* CABEÇÁRIO */
 
-    header {
-        position: relative;
-        top: 0px;
-        height: 350px;
-        width: 100%;    
-    }
+#menu-principal {
+    float: right;
+    list-style: none;
+    padding: 5px; 
+}
 
-    nav#menu {
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100px;
-        z-index: 1;
-        background-color: rgba(0,0,0,0.7);
-    }
+#menu-principal li {
+    display: inline-block;
+}
 
-    img#logo-img {
-        width: 50px;
-        height: 50px;
-        margin-top: 25px;
-        margin-left: 30px;
-        border-radius: 50%;
-        box-shadow: 0px 0px 3px rgba(119, 0, 153, 1);
-    }
+#menu-principal li a {
+    text-decoration: none;
+    padding: 3px 7px;
+    background-color: #c6c6c6;
+    color: var(---cor1);
+    border-radius: 0px 5px;
+    border: 1px solid var(--cor1);
+}
 
-    img#logo-img:hover {
-        box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.7);
-    }
-
-    ul#navegador {
-        float: right;
-        height: 100px;
-        line-height: 100px;
-        margin-right: 15px;
-    }
-
-    ul#navegador li {
-        float: left;
-        list-style: none;
-        margin: 0px 5px;
-    }
-
-    ul#navegador li a {
-        text-decoration: none;
-        padding: 5px 25px;
-        border-radius: 5px;
-        color: var(--corA);
-        background-color: rgba(0,0,0,0.9);
-        box-shadow: 0px 0px 5px rgba(119, 0, 153, 0.7);
-        font-family: var(--text2);
-        font-size: 1.1em;
-        font-weight: bold;
-        transition: 0.5s;
-    }
-
-    ul#navegador li a:hover {
-        color: var(--cor0);
-        box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.7);
-    }
-
-    div#banner {
-        background-image: url('../_imagens/banner1.jpg');
-        background-size: cover;
-        background-position: 0% 50%;
-        height: 350px;
-    }
-
-    div#banner h1, div#banner h2 {
-        color: var(--cor0);
-        text-align: center;
-        text-shadow: 3px 3px 3px rgba(119, 0, 153, 0.7);
-    }
-
-    div#banner h1 {
-        font-family: var(--text1);
-        padding-top: 150px;
-        font-size: 4em;
-    }
-
-    div#banner h2 {
-        font-family: var(--text2);
-        padding-top: 10px;
-        font-size: 2.5em;
-    }
-
-    .involucro {
-        /* background-color: black; */
-        position: relative;
-        max-width: 1200px;
-        margin: 0px auto;
-        box-shadow: 0px 0px 5px #550055;
-    }
+#menu-principal li a:hover {
+    background-color: var(--cor1);
+    color: #c6c6c6;
+    border: 1px solid #c6c6c6;
+}
 
 
 
+/* RODAPÉ */
 
+#rodape {
+    border-top: 1px solid var(--cor1);
+}
 
-    
+.boxes-rodape {
+    background-color: aqua;
+    width: 200px;
+    float: left;
+    margin: 5px;
+    padding: 5px;
+}
+
+.boxes-rodape ul {
+    list-style: none;
+}
+
+/* .boxes-rodape ul li {
+
+} */
+
+.boxes-rodape ul li a {
+    text-decoration: none;
+
+}
+
+#creditos {
+    clear: both;
+    background-color: #c6c6c6;
+    color: var(--cor0);
+    border-radius: 0px 0px 5px 5px;
+    padding:3px;
+    text-align: center;
+    font-size: 10pt;
 }
