--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -26,8 +26,7 @@ font-family: 'Yatra One', cursive;
     /* --core: #; */
     --text1: 'Amarante', cursive;
     /* --text2: 'Roboto', sans-serif; */
-    --textn: 'Galdeano', sans-serif;
-
+    --textn: 'Yatra One', cursive;
 }
 
 html {
