--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -26,7 +26,8 @@ font-family: 'Yatra One', cursive;
     /* --core: #; */
     --text1: 'Amarante', cursive;
     /* --text2: 'Roboto', sans-serif; */
-    --textn: 'Yatra One', cursive;
+    --textn: 'Galdeano', sans-serif;
+
 }
 
 html {
